<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CustomerLoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:id="@+id/customer_login_container">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/customer_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:singleLine="true"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/customer_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true"

            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/customer_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/button_login"
        android:background ="@drawable/roundedbutton"
        android:textColor="@color/white"/>


    <Button
        android:id="@+id/customer_btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_create"
        android:layout_marginTop="16dp"
        android:background ="@drawable/roundedbutton"
        android:textColor="@color/white"/>

</LinearLayout>